# src/types/index.ts
@@ -26,9 +26,11 @@ export * from './apiResponsePresignedUrlResult';
 export * from './apiResponseProvinceResult';
 export * from './apiResponseRegisterResult';
 export * from './apiResponseRoleResult';
+export * from './apiResponseString';
 export * from './apiResponseUserProfileResult';
 export * from './apiResponseVerificationResult';
 export * from './apiResponseVoid';
+export * from './apiResponseWalletResult';
 export * from './apiResponseWardResult';
 export * from './assignPermissionRequest';
 export * from './changePasswordCommand';
@@ -63,6 +65,7 @@ export * from './getAllRolesParams';
 export * from './getAllWardsParams';
 export * from './getMyContactsParams';
 export * from './getRolePermissionsParams';
+export * from './handleMomoWebhookBody';
 export * from './importProvincesBody';
 export * from './importWardsBody';
 export * from './initiateMfaSetupMethod';
@@ -101,6 +104,8 @@ export * from './sendVerificationCodeQueryChannel';
 export * from './sendVerificationCodeQueryPurpose';
 export * from './syncPermissionCommand';
 export * from './tokenRotationRequest';
+export * from './topUpRequest';
+export * from './topUpRequestProvider';
 export * from './updateContactRequest';
 export * from './updateDepotRequest';
 export * from './updateDepotRequestType';
@@ -115,6 +120,8 @@ export * from './uploadPresignedUrlCommandType';
 export * from './userProfileResult';
 export * from './verificationResult';
 export * from './verifyMfaCommand';
+export * from './walletResult';
+export * from './walletResultStatus';
 export * from './wardId';
 export * from './wardResult';
 export * from './wardResultType';
